# django-cotton-uswds

./: .actrc  .gitignore  .python-version  MANIFEST.in  PROMPT.md  README.md  TASKS.md  UBIQUITOUS_LANGUAGE.md  justfile  pyproject.toml  ralph.sh
.github/actions/build-test-static/: action.yml
.github/workflows/: ci.yml  pages.yml  publish-testpypi.yml  publish.yml
demo_project/: settings.py  urls.py
demo_project/demo_app/: forms.py  middleware.py  urls.py  views.py
demo_project/demo_app/templates/demo_app/: base.html  component_index.html  demo.html  index.html  pattern_base.html
demo_project/docs/: adr-001-url-prefix-middleware.md
django_cotton_uswds/: README.md  __init__.py  apps.py  mixins.py  renderer.py
django_cotton_uswds/templates/cotton/: accordion.html  accordion_item.html  banner.html  checkbox.html  currency_input.html
django_cotton_uswds/templates/cotton/alert/: index.html
django_cotton_uswds/templates/cotton/breadcrumb/: breadcrumb_item.html  index.html
django_cotton_uswds/templates/cotton/button/: index.html
django_cotton_uswds/templates/cotton/button_group/: button_group_item.html  index.html
django_cotton_uswds/templates/cotton/card/: body.html  footer.html  group.html  header.html  index.html  media.html
django_cotton_uswds/templates/cotton/character_count/: index.html
django_cotton_uswds/templates/cotton/collection/: index.html  item.html  meta.html  meta_item.html
django_cotton_uswds/templates/cotton/combo_box/: index.html
django_cotton_uswds/templates/cotton/date_picker/: index.html
django_cotton_uswds/templates/cotton/date_range_picker/: index.html
django_cotton_uswds/templates/cotton/error_message/: index.html
django_cotton_uswds/templates/cotton/fieldset/: index.html
django_cotton_uswds/templates/cotton/file_input/: index.html
django_cotton_uswds/templates/pattern_library/: index.html
django_cotton_uswds/templates/patterns/: README.md  base.html
django_cotton_uswds/templatetags/: __init__.py  cotton_aliases.py
plans/: form-renderer-demo.md  ralph-task-runner.md
tests/: settings.py  test_breadcrumb.py  test_cotton_aliases_deprecation.py  test_engine_boundary.py  test_form_renderer_demo.py  test_renderer.py  test_textarea.py
tests/templates/: test_breadcrumb_current_page.html  test_breadcrumb_multiple_items.html  test_breadcrumb_wrapped.html
(+264 files in other folders)
