[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-cotton-uswds"
version = "0.1.0"
description = "USWDS components for Django Cotton"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "django>=4.2",
    "django-cotton>=1.2.1",
]

[project.optional-dependencies]
demo = ["django-distill>=3.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["django_cotton_uswds"]
