[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "django-cotton-uswds"
dynamic = ["version"]
description = "USWDS components for Django Cotton"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "django>=4.2",
    "django-cotton>=1.2.1",
]

[project.optional-dependencies]
demo = ["django-pattern-library>=1.5.0", "django-distill>=3.0.0"]
dev = ["django-pattern-library>=1.5.0", "ruff>=0.4.0", "django-distill>=3.0.0"]
test = ["django-pattern-library>=1.5.0", "pytest>=8.0", "pytest-django>=4.8"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.hooks.vcs]
version-file = "django_cotton_uswds/_version.py"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "demo_project"]

[tool.hatch.build.targets.wheel]
packages = ["django_cotton_uswds"]
